--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 <body>
     <header class="header">
         <h1>Discover hidden places in the world around you</h1>
-        <p class="download">Download Exxcursion (Coming Soon)</p>
+        <p><a href="#">Download Excursion (Coming Soon!)</a></p>
     </header>
+    <div class="video">
+        <video src="./excursion.mov" controls autoplay></video>
+    </div>
+    <h2>You personal travel guide</h2>
+    <p class="motive">Excursion remembers the place you like, and recommends new places you may want to visit.</p>
+    <figure>
+        <img src="./resources/images/camp.jpg" class="camp" alt="camp">
+    </figure>
+    <figure>
+        <img src="./resources/images/phone.png" class="phone" alt="phone">
+    </figure>
+    <p>Coming soon for Iphone and Android</p>
+    <p class="link"><a href="#">Download Excursion (Coming Soon!)</a></p>
+    <footer>
+        @Excursion
+    </footer>
 </body>
 </html>
